Fix spacing for information section

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ button {
     flex: 1 0 auto;
     width: 100vw;
     justify-content: center;
+    align-items: center;
 }
 
 .topbox,
@@ -87,6 +88,7 @@ h2 {
     color: #1F2937;
     font-size: 36px;
     font-weight: 800;
+    margin: 0;
 }
 
 ul {
@@ -137,7 +139,11 @@ ul {
 .information {
     text-align: center;
     flex: 1 0;
-    padding: 50px 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 25px;
+    height: 450px;
 }
 
 .container {
